@@ -1,4 +1,6 @@
 lldpd (1.0.15)
+ * Changes
+   + Add configure command to override system capabilities (#526)
  * Fix:
    + Really don't send VLANs when there are too many (#520)
    + Ignore temporary IPv6 addresses (#521)
